[gd_scene load_steps=3 format=3 uid="uid://dgob5pnqy8ksq"]

[ext_resource type="Script" path="res://Scripts/timeline_list.gd" id="1_qs26f"]
[ext_resource type="PackedScene" uid="uid://d4dfy5ly586ai" path="res://timeline_panel.tscn" id="2_60cyk"]

[node name="TimelineList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qs26f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TimelinePanel" parent="MarginContainer/ScrollContainer/PanelContainer" instance=ExtResource("2_60cyk")]
visible = false
layout_mode = 2

[node name="TimelinePanel2" parent="MarginContainer/ScrollContainer/PanelContainer" instance=ExtResource("2_60cyk")]
visible = false
layout_mode = 2

[node name="TimelinePanel3" parent="MarginContainer/ScrollContainer/PanelContainer" instance=ExtResource("2_60cyk")]
visible = false
layout_mode = 2

[node name="TimelinePanel4" parent="MarginContainer/ScrollContainer/PanelContainer" instance=ExtResource("2_60cyk")]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
visible = false
custom_minimum_size = Vector2(0, 1000)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
